<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoPersistencia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_nome">Nome</string>
    <string name="label_senha">Senha</string>
    <string name="label_manter_conectado">manter conectado</string>
    <string name="bt_conectar">conectar</string>
    <string name="hint_nome">digite seu nome</string>
    <string name="hint_senha">digite sua senha</string>
    <string name="msg_usuario_invalido">Usuário Inválido</string>

</resources>
